# superdoku

./: Cargo.toml  README.md  rustfmt.toml
src/: board.rs  lib.rs  main.rs
src/board/: square.rs
src/board/square/: number.rs  superposition.rs
src/cli/: io.rs  mod.rs
src/cli/menus/: game.rs  main.rs  mod.rs  setup.rs  start.rs
src/square/: mod.rs  superposition.rs
tests/: board_display.rs
