[package]
    name    = "superdoku"
    version = "0.1.1"

    authors = ["Jade Lynn Masker <donottellmetonottellyou@gmail.com>"]

    edition = "2021"
    publish = false

[dependencies]
    anyhow = { version = "1.*" }
    clap   = { version = "4.*", features = ["derive"] }
    rand   = { version = "0.8.*" }

[dev-dependencies]
    pretty_assertions = { version = "1.*" }

[profile.release]
    codegen-units = 1
    lto           = true
    strip         = true
